# PoliMon

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
asset/: tilemap.json
asset/maps/: test.tmj
config/: settings.xml
src/core/: CMakeLists.txt  Config.cpp  Logger.cpp  ResourcePaths.cpp  xml_reader.cpp
src/core/include/: Config.h  Logger.h  ResourcePaths.h  xml_reader.h
src/engine/: Application.cpp  CMakeLists.txt
src/engine/assets/: hint.txt
src/engine/include/: Application.h
src/engine/include/ui/: ui_element.h
src/engine/ui/: ui_element.cpp
src/game/: CMakeLists.txt  Game.cpp
src/game/entities/: Player.cpp
src/game/graphics/: TextureManager.cpp
src/game/include/: Game.h
src/game/include/entities/: Entity.h  Player.h  hint.txt
src/game/include/graphics/: TextureManager.h  hint.txt
src/game/include/math/: hint.txt
src/game/include/world/: Camera.h  CollisionLayer.h  ColorTileMap.h  EntityLayer.h  MapLoader.h  ObjectLayer.h  TileMap.h  Tileset.h  hint.txt  world.h
src/game/world/: CollisionLayer.cpp  ColorTileMap.cpp  EntityLayer.cpp  MapLoader.cpp  ObjectLayer.cpp  TileMap.cpp  Tileset.cpp  world.cpp
src/graphics/: CMakeLists.txt  glad.c
src/graphics/gl_context/: renderer.cpp
src/graphics/include/: IRenderer.h
src/graphics/include/gl_context/: renderer.h
src/graphics/include/glad/: glad.h
src/graphics/include/models/: Color.h  IClonable.h  Point.h  Rect.h
src/main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  ConfigTest.cpp
